tests/snapshots/run_wpt_conformance__trtx_sub_float32_broadcast_2D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sub.https.any.js",
    "sub float32 broadcast 2D to 4D",
    "trtx",
    "PASS",
)
