tests/snapshots/run_wpt_conformance__trtx_sub_uint8_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "sub.https.any.js",
    "sub uint8 4D tensors",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: u8[1, 2, 2, 1];\n    inputB: u8[1, 2, 2, 1];\n  }\n\n  nodes {\n    [output] = sub(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
